# Integradora2

./: CMakeLists.txt  README.md  sonar-project.properties
ActividadIntegradora2/: CMakeLists.txt  input1.txt  input2.txt  input3.txt  main.cpp  programa
ActividadIntegradora2/.github/workflows/: build.yml
ActividadIntegradora2/.github/workflows/.github/workflows/: sonarqube.yml
ActividadIntegradora2/.github/workflows/.github/workflows/test/: test_network.cpp
ActividadIntegradora2/.github/workflows/.github/workflows/test/include/: NetworkOptimizer.h
include/: NetworkOptimizer.h
src/: NetworkOptimizer.cpp
test/: test_network.cpp
